<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name"><![CDATA[Connectivity&LocationManager]]></string>

    <string name="gps_icon">Uruchom usługę gps</string>
    <string name="internet_icon">Nawiąż połączenie z internetem</string>

    <string name="location_manager">Stan lokalizacji GPS</string>
    <string name="connection_manager">Typy połączenia z siecią internet</string>

    <string name="choose_criteria">Wybierz poziom dokładności</string>
    <string name="criteria_coarse">Przybliżony</string>
    <string name="criteria_low">Niski</string>
    <string name="criteria_medium">Średni</string>
    <string name="criteria_high">Wysoki</string>
    <string name="criteria_fine">Dokładny</string>

    <string name="longitude">Długość geograficzna</string>
    <string name="latitude">Szerokość geograficzna</string>
    <string name="location_not_available">Lokalizacja niedostępna</string>

    <string name="choose_connection_type">Wybierz rodzaj połączenia</string>
    <string name="wifi_connection">Wi-Fi</string>
    <string name="ethernet_connection">Ethernet</string>
    <string name="wimax_connection">WiMax</string>
    <string name="mms_connection">MMS</string>
    <string name="mobile_connection">Internet mobilny</string>


    <string name="hint_address">Wpisz adres WWW</string>
    <string name="connect_button">Połącz</string>
    <string name="default_connection_status">Brak aktywnego połączenia</string>

    <string name="connection_type">Typ połączenia:</string>
    <string name="default_connection_type">Brak połączenia</string>

    <string name="connection_state">Stan połączenia:</string>
    <string name="default_connection_state">Brak połączenia</string>

    <string name="current_connection">Typ aktualnego połączenia</string>
    <string name="current_connection_state">Nieznane</string>



</resources>
