<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:weightSum="1">

    <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_connection_type"
                android:id="@+id/connectionTypes"/>
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_connection"
                android:id="@+id/wifiRadio" android:checked="true" android:onClick="setWifi"/>
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ethernet_connection"
                android:id="@+id/ethernetRadio" android:onClick="setEthernet"/>
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wimax_connection"
                android:id="@+id/wimaxRadio" android:onClick="setWimax"/>
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mms_connection"
                android:id="@+id/mmsRadio" android:onClick="setMMS"/>
    </RadioGroup>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    </LinearLayout>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/urlAddressField"
            android:autoText="false"
            android:hint="@string/hint_address"
            android:layout_marginTop="15dp"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect_button"
            android:id="@+id/connect_button"
            android:layout_marginTop="10dp" android:onClick="connect"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_connection_status"
            android:id="@+id/connectionStatus" android:layout_marginTop="25dp"/>
</LinearLayout>