<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:weightSum="1">

    <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:id="@+id/locationRadioBox">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_criteria"
                android:id="@+id/locationRadioBoxText"/>

        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/criteria_coarse"
                android:id="@+id/criteria_coarse" android:checked="true" android:onClick="setCoarse"/>
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/criteria_low"
                android:id="@+id/criteria_low" android:onClick="setLow"/>
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/criteria_medium"
                android:id="@+id/criteria_medium" android:onClick="setMedium"/>
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/criteria_high"
                android:id="@+id/criteria_high" android:onClick="setHigh"/>
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/criteria_fine"
                android:id="@+id/criteria_fine" android:onClick="setFine"/>
    </RadioGroup>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longitude"
                android:id="@+id/longitude" android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/longitude_value"
                android:text="@string/location_not_available"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latitude"
                android:id="@+id/latitude"
                android:layout_below="@+id/longitude"
                android:layout_alignParentStart="true"
                android:layout_marginTop="36dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/latitude_value"
                android:text="@string/location_not_available"
                android:layout_alignTop="@+id/latitude"
                android:layout_alignEnd="@+id/longitude_value"/>
    </RelativeLayout>

</LinearLayout>